--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="app.js" defer></script>
 </head>  
 <body>
+    <!-- some changes to see -->
     <header>
 
         <div class="container my-3 mt-4">
